# rag-manufacturing-qa

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
data/sample_docs/: sample_manual.txt
notebooks/: 01_rag_pipeline_demo.ipynb
scripts/: ingest_docs.py
src/: app.py  ingestion.py  qa_chain.py  retriever.py
tests/: test_ingestion.py
