[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-manufacturing-qa"
version = "0.2.0"
description = "RAG pipeline for querying manufacturing SOPs and maintenance documentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dmitri Shurkhai", email = "etozhejimmy@gmail.com" }]
keywords = ["rag", "llm", "manufacturing", "langchain", "chromadb"]
dependencies = [
    "streamlit>=1.32.0", "langchain>=0.1.0", "langchain-community>=0.0.20",
    "chromadb>=0.4.0", "anthropic>=0.20.0", "openai>=1.0.0",
    "pandas>=2.0.0", "python-dotenv>=1.0.0", "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
